# hi3520d

osdrv/ezcfg/ezcfg-0.1/: AUTHORS  ChangeLog  INSTALL  Makefile.am  README  README.md  autogen.sh  configure.ac
osdrv/ezcfg/ezcfg-0.1/doc/: EZCFG_NVRAM.wsdl  IGRS_1_0_DeviceDescriptionTemplate.xml  IGRS_1_0_ServiceDescriptionTemplate_WSDL_1_1.wsdl  IGRS_1_0_ServiceDescriptionTemplate_WSDL_2_0.wsdl  IGRS_1_0_TransportBindingTemplate.xml  README_ezcd  README_ezcm  README_ezctp  TimeService.wsdl  TimeService20.wsdl  ZBAP.wsdl  ZBKAP.wsdl  agent_env_default.conf  ezbox_boot.cfg.dft  ezbox_rootfs.cfg  ezcd.conf  nv_json_http_test.txt
osdrv/ezcfg/ezcfg-0.1/doc/ezcnc/: cnc-xendoll.cfg  cnc-xendoll.hal  cnc-xendoll.ini  ezcnc.cfg  ezcnc.hal  ezcnc.ini
osdrv/ezcfg/ezcfg-0.1/ezcd/: Makefile.am  configure.ac
osdrv/ezcfg/ezcfg-0.1/ezcd/include/: ezcd.h  pop_func.h  rc_func.h  utils.h
osdrv/ezcfg/ezcfg-0.1/ezcd/lib/: Makefile.am  exported_symbols  libezcd.pc.in
osdrv/ezcfg/ezcfg-0.1/ezcd/m4/: check.m4
osdrv/ezcfg/ezcfg-0.1/ezcd/src/: agent_env.c  ezcd.c  ezcm.c  ezcm_igrs.c  eznvc.c  igrs_monitor.c  init.c  main.c  nvram.c  preinit.c  rc.c  shelld.c  sysup.c  ubootenv.c  udhcpc_script.c  upfw.c  upnp_monitor.c
osdrv/ezcfg/ezcfg-0.1/ezcd/src/pop/: pop_etc_banner.c  pop_etc_cgconfig_conf.c  pop_etc_cgrules_conf.c  pop_etc_chilli_conf.c  pop_etc_dhid_conf.c  pop_etc_dhis_db.c  pop_etc_dhisd_conf.c  pop_etc_dillo_dillorc.c  pop_etc_dnsmasq_conf.c  pop_etc_emc2_configs.c  pop_etc_emc2_rtapi_conf.c  pop_etc_ezcd_conf.c  pop_etc_ezcfg_igrsd.c  pop_etc_ezcfg_upnpd.c  pop_etc_ezcfg_upnpd_igd1.c  pop_etc_ezcm_conf.c  pop_etc_fonts.c  pop_etc_freeradius2_clients_conf.c  pop_etc_freeradius2_dictionary.c  pop_etc_freeradius2_eap_conf.c  pop_etc_freeradius2_radiusd_conf.c  pop_etc_group.c  pop_etc_hostname.c  pop_etc_hosts.c  pop_etc_hotplug2_rules.c  pop_etc_inittab.c  pop_etc_iptables_firewall.c  pop_etc_iptables_modules.c  pop_etc_keys_data_partition_key.c  pop_etc_l7_protocols.c  pop_etc_lxc_lxc_conf.c  pop_etc_mactab.c  pop_etc_mdev_conf.c  pop_etc_modules.c  pop_etc_mtab.c  pop_etc_network_interfaces.c  pop_etc_nvram_conf.c  pop_etc_passwd.c  pop_etc_ppp_chap_secrets.c  pop_etc_ppp_pap_secrets.c  (+8 more)
osdrv/ezcfg/ezcfg-0.1/ezcd/src/rc/: rc_debug.c  rc_fontconfig.c  rc_func.c  rc_hotplug2.c  rc_kdrive.c  rc_lan_services.c  rc_nano_x.c  rc_system.c  rc_wan_services.c
osdrv/ezcfg/ezcfg-0.1/ezcd/src/rcso/: env_action_base_files.c  env_action_bootstrap.c  env_action_br_lan_if.c  env_action_cgroup.c  env_action_data_partition.c  env_action_data_storage.c  env_action_dmcrypt_data_partition.c  env_action_eth_lan_if.c  env_action_eth_wan_if.c  env_action_ezcd.c  env_action_ezcm.c  env_action_iptables.c  env_action_klogd.c  env_action_lan.c  env_action_load_modules.c  env_action_login.c  env_action_loopback.c  env_action_mount_system_fs.c  env_action_netbase.c  env_action_nvram.c  env_action_openssl.c  env_action_overlay_rootfs.c  env_action_ppp_chap_secrets.c  env_action_ppp_pap_secrets.c  env_action_ppp_rp_pppoe.c  env_action_preboot.c  env_action_shelld.c  env_action_state.c  env_action_swap_partition.c  env_action_syslogd.c  env_action_system.c  env_action_udev_pop_nodes.c  env_action_wan.c  env_action_wan_if.c  env_action_wifi_lan_if.c  rc_agent.c  rc_bridge.c  rc_coova_chilli.c  rc_dhid.c  rc_dhisd.c  (+23 more)
osdrv/ezcfg/ezcfg-0.1/ezcd/src/utils/: utils_check_boot_ready.c  utils_check_data_ready.c  utils_check_ezcd.c  utils_check_partition_ready.c  utils_check_service.c  utils_check_wan_interface.c  utils_clean_dirs.c  utils_cleanup_rootfs.c  utils_crc32.c  utils_device_open.c  utils_execute.c  utils_file_get_content.c  utils_file_get_keyword.c  utils_file_get_line.c  utils_file_print_line.c  utils_find_pid_by_name.c  utils_get_bootcfg_keyword.c  utils_get_device_info.c  utils_get_kernel_init.c  utils_get_kernel_modules.c  utils_get_kernel_version.c  utils_get_mem_size.c  utils_get_rc_act_type.c  utils_get_wan_type.c  utils_handle_kernel_module.c  utils_init_ezcfg_api.c  utils_make_dirs.c  utils_mkdir.c  utils_mount_partition.c  utils_netmask_to_prefix.c  utils_nvram_cmp.c  utils_parse_args.c  utils_parse_upnp_task.c  utils_read_write.c  utils_route_delete_default.c  utils_swap_partition.c  utils_switch_root.c  utils_sync_cfg_with_nvram.c  utils_sync_nvram_with_cfg.c  utils_system.c  (+1 more)
osdrv/ezcfg/ezcfg-0.1/i18n/html/: pot_list.txt
osdrv/ezcfg/ezcfg-0.1/i18n/html/pot/: admin_menu_setup.pot  admin_menu_status.pot  admin_status_system.pot  index.pot
osdrv/ezcfg/ezcfg-0.1/libezcfg/: COPYING  Makefile.am  configure.ac  exported_symbols  exported_symbols_test  libezcfg.pc.in
osdrv/ezcfg/ezcfg-0.1/libezcfg/api/include/: ezcfg-api.h
osdrv/ezcfg/ezcfg-0.1/libezcfg/api/src/: api-agent.c  api-arg_nvram_socket.c  api-arg_nvram_ssl.c  api-common.c  api-ctrl.c  api-ezctp.c  api-firmware.c  api-ipc.c  api-master.c  api-nvram.c  api-nvram_json.c  api-rc.c  api-ubootenv.c  api-upnp.c  api-util.c  api-uuid.c
osdrv/ezcfg/ezcfg-0.1/libezcfg/include/: ezcfg-adsl_wan.h  ezcfg-br_lan.h  ezcfg-dhid.h  ezcfg-dhisd.h  ezcfg-dillo.h  ezcfg-dmcrypt.h  ezcfg-dnsmasq.h  ezcfg-emc2.h  ezcfg-env.h  ezcfg-errno.h  ezcfg-eth_lan.h  ezcfg-eth_wan.h  ezcfg-ezbox_distro.h  ezcfg-ezcfg.h  ezcfg-freeradius2_server.h  ezcfg-html.h  ezcfg-http.h  ezcfg-http_html_admin.h  ezcfg-http_html_apply.h  ezcfg-igrs.h  ezcfg-iptables.h  ezcfg-json_http.h  ezcfg-kdrive.h  ezcfg-lan.h  ezcfg-loopback.h  ezcfg-lxc.h  ezcfg-nano_x.h  ezcfg-nv_json_http.h  ezcfg-nv_json_http_socket.h  ezcfg-nvram_agent.h  ezcfg-nvram_defaults.h  ezcfg-nvram_meta.h  ezcfg-nvram_process.h  ezcfg-nvram_socket.h  ezcfg-nvram_sys.h  ezcfg-nvram_thread.h  ezcfg-openssl.h  ezcfg-ppp.h  ezcfg-pppoe_server.h  ezcfg-priv_agent.h  (+53 more)
osdrv/ezcfg/ezcfg-0.1/libezcfg/lib/: Makefile.am
osdrv/ezcfg/ezcfg-0.1/libezcfg/src/bak/: link_list.c  list.c  (+1 more)
osdrv/ezcfg/ezcfg-0.1/libezcfg/tests/: Makefile.am  valgrind_check.sh
osdrv/ezcfg/ezcfg-0.1/scripts/: gen-pot-files.sh  replace-all-strings.sh
osdrv/ezcfg/ezcfg-0.1/web/: index.shtm
osdrv/ezcfg/ezcfg-0.1/web/admin/: index.shtm
(+185 files in other folders)
